Only run tests when code changes

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,9 +3,17 @@ on:
   push:
     branches:
       - "main"
+    paths:
+      - src/*
+      - examples/*
+      - benches/*
   pull_request:
     branches:
       - "*"
+    paths:
+      - src/*
+      - examples/*
+      - benches/*
 jobs:
   test:
     name: test
