--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,21 +8,21 @@ readme = "Readme.md"
 
 [features]
 default = ["support-rust-embed", "support-rust-embed-for-web"]
-support-rust-embed = ["rust-embed", "flate2", "base64", "chrono"]
+support-rust-embed = ["rust-embed", "base64", "chrono"]
 support-rust-embed-for-web = ["rust-embed-for-web"]
 
 [dependencies]
 actix-web = "4.2"
 futures-core = "0.3"
-lazy_static = "1.4"
-regex = "1.6"
+lazy_static = "1.4"  # static caching stuff
+regex = "1.6"        # parsing header valuesg
+flate2 = "1.0"       # gzip compressed responses when doing on-the-fly compression
 # rust-embed only
 rust-embed = { version = "6.4", optional = true }
-flate2 = { version = "1.0", optional = true }     # gzip compressed responses
 base64 = { version = "0.13", optional = true }    # ETag
 chrono = { version = "0.4", optional = true }     # Last-Modified
 # rust-embed-for-web only
-rust-embed-for-web = { version = "9.0", optional = true }
+rust-embed-for-web = { version = "^9.0.1", optional = true }
 
 [dev-dependencies]
 criterion = { version = "0.4", features = ["async_tokio"] }
