--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,7 +12,7 @@ jobs:
         uses: taiki-e/install-action@cargo-llvm-cov
       - uses: Swatinem/rust-cache@v2
       - name: Generate code coverage
-        run: cargo llvm-cov --all-features --benches --workspace --lcov --output-path lcov.info
+        run: cargo llvm-cov --all-features --benches --tests --workspace --lcov --output-path lcov.info
   release:
     name: release
     needs: [tests]
