Add brotli support

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ futures-core = "0.3"
 lazy_static = "1.4"  # static caching stuff
 regex = "1.6"        # parsing header valuesg
 flate2 = "1.0"       # gzip compressed responses when doing on-the-fly compression
+brotli = "3.3"       # br compressed responses when doing on-the-fly compression
 # rust-embed only
 rust-embed = { version = "6.4", optional = true }
 base64 = { version = "0.13", optional = true }    # ETag
