--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "actix-web-rust-embed-responder"
-version = "2.1.0"
+version = "2.1.1"
 edition = "2021"
 description = "An actix-web responder for rust-embed that implements cache revalidation and compressed responses."
 license = "MIT"
@@ -20,10 +20,10 @@ lazy_static = "1.4"  # static caching stuff
 regex = "1.6"        # parsing header valuesg
 flate2 = "1.0"       # gzip compressed responses when doing on-the-fly compression
 brotli = "3.3"       # br compressed responses when doing on-the-fly compression
+chrono = "0.4"       # Parsing & serializing Last-Modified headers
 # rust-embed only
 rust-embed = { version = "6.4", optional = true }
 base64 = { version = "0.13", optional = true }    # ETag
-chrono = { version = "0.4", optional = true }     # Last-Modified
 # rust-embed-for-web only
 rust-embed-for-web = { version = "11.1", optional = true }
 
