--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ readme = "Readme.md"
 
 [features]
 default = ["support-rust-embed", "support-rust-embed-for-web"]
-support-rust-embed = ["rust-embed", "base64", "chrono"]
+support-rust-embed = ["rust-embed", "base64"]
 support-rust-embed-for-web = ["rust-embed-for-web"]
 # testing only, please ignore!
 always-embed = ["rust-embed-for-web/always-embed"]
