--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "actix-web-rust-embed-responder"
-version = "2.2.0"
+version = "2.2.1"
 edition = "2021"
 description = "An actix-web responder for rust-embed that implements cache revalidation and compressed responses."
 license = "MIT"
@@ -25,7 +25,7 @@ chrono = { version = "0.4", default-features = false, features = ["clock"] }
 rust-embed = { version = "6.4", optional = true }
 base64 = { version = "0.21", optional = true }    # ETag
 # rust-embed-for-web only
-rust-embed-for-web = { version = "11.1.0", optional = true, git = "https://github.com/zinclabs/rust-embed-for-web.git" }
+rust-embed-for-web = { version = "11.1.1", optional = true }
 
 [dev-dependencies]
 criterion = { version = "0.4", features = ["async_tokio"] }
