--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "actix-web-rust-embed-responder"
-version = "2.2.1"
+version = "2.2.2"
 edition = "2021"
 description = "An actix-web responder for rust-embed that implements cache revalidation and compressed responses."
 license = "MIT"
@@ -14,25 +14,25 @@ support-rust-embed-for-web = ["rust-embed-for-web"]
 always-embed = ["rust-embed-for-web/always-embed"]
 
 [dependencies]
-actix-web = "4.3"
+actix-web = "4.4"
 futures-core = "0.3"
 lazy_static = "1.4" # static caching stuff
-regex = "1.6" # parsing header valuesg
+regex = "1.9" # parsing header values
 flate2 = "1.0" # gzip compressed responses when doing on-the-fly compression
-brotli = "3.3" # br compressed responses when doing on-the-fly compression
+brotli = "3.4" # br compressed responses when doing on-the-fly compression
 chrono = { version = "0.4", default-features = false, features = [
-    "clock",
+  "clock",
 ] } # Parsing & serializing Last-Modified headers
 # rust-embed only
-rust-embed = { version = "6.4", optional = true }
+rust-embed = { version = "8.0", optional = true }
 base64 = { version = "0.21", optional = true }    # ETag
 # rust-embed-for-web only
 rust-embed-for-web = { version = "11.1.1", optional = true }
 
 [dev-dependencies]
-criterion = { version = "0.4", features = ["async_tokio"] }
+criterion = { version = "0.5", features = ["async_tokio"] }
 tokio = { version = "1", features = ["rt"] }
-actix-http = "3.3"
+actix-http = "3.4"
 
 #
 # Example programs
