--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,6 +7,7 @@ on:
       - src/*
       - examples/*
       - benches/*
+      - Cargo.toml
   pull_request:
     branches:
       - "*"
@@ -14,6 +15,7 @@ on:
       - src/*
       - examples/*
       - benches/*
+      - Cargo.toml
 jobs:
   test:
     name: test
